--- a/backend/src/config/.env
+++ b/backend/src/config/.env
@@ -1,2 +1,2 @@
 port = 3000
-url = "mongodb+srv://asapDatabaseUser:asapPassword@cluster0.ourld.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+databaseURL = mongodb+srv://asapDatabaseUser:asapPassword@cluster0.ourld.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
