--- a/backend/src/config/.env
+++ b/backend/src/config/.env
@@ -1,2 +1,7 @@
 port = 3000
 databaseURL = mongodb+srv://asapDatabaseUser:asapPassword@cluster0.ourld.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+DB_HOST = localhost
+DB_USER = root
+DB_PASSWORD = needless
+DB_NAME = test_db
