--- a/backend/src/config/.env
+++ b/backend/src/config/.env
@@ -1,5 +1,6 @@
 port = 3000
 databaseURL = mongodb+srv://asapDatabaseUser:asapPassword@cluster0.ourld.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET = jockey
 
 DB_HOST = localhost
 DB_USER = root
